// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "pkg/pb;pb";

message ExposureKeyExport {
	// Time window of keys based on arrival to server, in UTC
	int64 startTimestamp = 1;
	int64 endTimestamp = 2;
	// Region for which these keys came from (e.g., country)
	string region = 3;
	repeated ExposureKey keys = 4;
	// E.g., Batch 2 of 10
	int32 batchNum = 5;
	int32 batchSize = 6;

	message ExposureKey {
		// Key of infected user
		bytes exposureKey = 1;
		// Together, next two fields specify window of validity of key
		// E.g., assuming 10 min intervals a key from 2020-04-19 and
		// only good until 1 pm might have intervalStart = 2645424
		// and intervalCount = 78
		int32 intervalNumber = 2;
		int32 intervalCount = 3;
	}
}
